update details of project

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     Hi! I am janvi!
     I worked at Dhyey consulting
+    
+    I have worked  on some business central products.
 </body>
 </html>
